--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,10 @@ p, li, figcaption {
 footer {
 	background-color: #FFF;
 	border-top: 4px solid #CDC9C5;
+	margin: auto;
+	width: 100%;
+	height: 80px;
+	text-align: center;
 }
 
 #content, #images {
